--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,17 @@ anyio==4.6.2.post1
 asgiref==3.8.1
 async-timeout==4.0.3
 attrs==24.2.0
+blinker==1.8.2
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
+cs50==9.4.0
 dataclasses-json==0.6.7
 Django==5.1.2
 exceptiongroup==1.2.2
 faiss-cpu==1.9.0
+Flask==3.0.3
 frozenlist==1.5.0
 google-ai-generativelanguage==0.6.10
 google-api-core==2.22.0
@@ -25,12 +28,15 @@ googleapis-common-protos==1.65.0
 greenlet==3.1.1
 grpcio==1.67.1
 grpcio-status==1.67.1
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.6
 httplib2==0.22.0
 httpx==0.27.2
 httpx-sse==0.4.0
 idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
 joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -42,6 +48,7 @@ langchain-pinecone==0.2.0
 langchain-text-splitters==0.3.2
 langsmith==0.1.139
 Markdown==3.7
+MarkupSafe==3.0.2
 marshmallow==3.23.1
 mmh3==4.1.0
 multidict==6.1.0
@@ -76,6 +83,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.35
 sqlparse==0.5.1
 tenacity==9.0.0
+termcolor==2.5.0
 threadpoolctl==3.5.0
 tqdm==4.66.6
 types-requests==2.32.0.20241016
@@ -83,5 +91,7 @@ typing-inspect==0.9.0
 typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.2.3
+Werkzeug==3.1.2
 wget==3.2
+whitenoise==6.8.2
 yarl==1.17.1
