--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,8 @@ pinecone-text==0.9.0
 propcache==0.2.0
 proto-plus==1.25.0
 protobuf==5.28.3
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydantic==2.9.2
